<resources>
    <string name="app_name">PerishableReportingApplication</string>
    <string name="google_app_id">ca.team5.PerishableReportingApplication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="perishable_reporting">Perishable Reporting</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter Your Username</string>
    <string name="go">Go</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="password">Password: </string>
    <string name="next">Next</string>
    <string name="enter_a_quantity_opt">Quantity (Opt.):</string>
    <string name="add">Add</string>
    <string name="or_enter_a_name">Or Enter A Name</string>
    <string name="add_order">Add Order</string>
    <string name="add_item">Add Item</string>
    <string name="reserve">Reserve</string>
    <string name="confirm_password">Confirm Password: </string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_email">Enter Your Email Address</string>
    <string name="email">Email Address:</string>
    <string name="register">Register</string>
    <string name="org_type">Organization Type:</string>
    <string name="sign_up">Sign Up</string>
    <string name="nav">Navigate</string>
    <string name="organization">Organization</string>
    <string name="co_name">Name:</string>
    <string name="enter_a_company_name">Organization\'s Name</string>
    <string name="address">Address:</string>
    <string name="enter_the_company_address">Organization\'s Address</string>
    <string name="next_page">Next</string>
</resources>
