<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/transparent_black_percent_50">
    <ImageView
        android:id="@+id/frp_iv_feature"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/company" />
    <TextView
        android:id="@+id/fr_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/organization"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:minHeight="40dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/frp_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight=".67"
            android:gravity="center"
            android:text="@string/co_name"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/frp_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:hint="@string/enter_a_company_name"
            android:padding="4dp"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColorHint="@color/transparent_white_percent_75" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:minHeight="40dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/frp_tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight=".67"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@color/white" />

        <AutoCompleteTextView
            android:id="@+id/frp_actv_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:hint="@string/enter_the_company_address"
            android:padding="4dp"
            android:textColor="@color/white"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColorHint="@color/transparent_white_percent_75" />

    </LinearLayout>
    <Button
        android:id="@+id/frp_btn_register"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/next_page"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent_black_percent_25"
        android:textColor="@color/white" />
</LinearLayout>