<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:background="@color/transparent_black_percent_50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/fl_iv_feature"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="76dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/login2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fl_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white"

                />

            <EditText
                android:id="@+id/fl_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:imeOptions="actionNext"
                android:padding="4dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/transparent_white_percent_75" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fl_tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/password"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/fl_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/transparent_white_percent_75" />
        </LinearLayout>

        <Button
            android:id="@+id/fl_btn_go"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@color/transparent_black_percent_50"
            android:padding="4dp"
            android:text="@string/go"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>